--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy<1.15.0
 matplotlib>=1.4,<2.2
 scipy>=0.12
-intervaltree>=2.1.0
+intervaltree>=3.0.0
 h5py>=2.2
 pysam>=0.7
-statsmodels
+statsmodels>=0.9.0
