--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,8 @@
-pip==9.0.1
 bumpversion==0.5.3
-wheel==0.30.0
-watchdog==0.8.3
 flake8==3.5.0
-tox==2.9.1
+tox==3.7.0
 coverage==4.5.1
-Sphinx==1.7.0
-pytest==3.4.1
-pytest-runner==2.11.1
-prospector==0.12.7
-vulture>=0.6,<0.25  # Required for https://github.com/landscapeio/prospector/issues/230
+Sphinx==1.8.5
+pytest==4.3.1
+prospector[with_vulture]==1.1.6.2
+
